--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.15"
+    "vue-router": "^4.0.15",
+    "web3": "^1.7.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
